cmake_minimum_required(VERSION 3.3)
project(Btree)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    docs/search/all_61.html
    docs/search/all_61.js
    docs/search/all_62.html
    docs/search/all_62.js
    docs/search/all_63.html
    docs/search/all_63.js
    docs/search/all_64.html
    docs/search/all_64.js
    docs/search/all_65.html
    docs/search/all_65.js
    docs/search/all_66.html
    docs/search/all_66.js
    docs/search/all_67.html
    docs/search/all_67.js
    docs/search/all_68.html
    docs/search/all_68.js
    docs/search/all_69.html
    docs/search/all_69.js
    docs/search/all_6b.html
    docs/search/all_6b.js
    docs/search/all_6c.html
    docs/search/all_6c.js
    docs/search/all_6d.html
    docs/search/all_6d.js
    docs/search/all_6e.html
    docs/search/all_6e.js
    docs/search/all_6f.html
    docs/search/all_6f.js
    docs/search/all_70.html
    docs/search/all_70.js
    docs/search/all_72.html
    docs/search/all_72.js
    docs/search/all_73.html
    docs/search/all_73.js
    docs/search/all_74.html
    docs/search/all_74.js
    docs/search/all_75.html
    docs/search/all_75.js
    docs/search/all_76.html
    docs/search/all_76.js
    docs/search/all_77.html
    docs/search/all_77.js
    docs/search/all_7e.html
    docs/search/all_7e.js
    docs/search/classes_62.html
    docs/search/classes_62.js
    docs/search/classes_65.html
    docs/search/classes_65.js
    docs/search/classes_66.html
    docs/search/classes_66.js
    docs/search/classes_68.html
    docs/search/classes_68.js
    docs/search/classes_69.html
    docs/search/classes_69.js
    docs/search/classes_6c.html
    docs/search/classes_6c.js
    docs/search/classes_6e.html
    docs/search/classes_6e.js
    docs/search/classes_70.html
    docs/search/classes_70.js
    docs/search/classes_72.html
    docs/search/classes_72.js
    docs/search/classes_73.html
    docs/search/classes_73.js
    docs/search/classes_74.html
    docs/search/classes_74.js
    docs/search/close.png
    docs/search/enums_64.html
    docs/search/enums_64.js
    docs/search/enums_6f.html
    docs/search/enums_6f.js
    docs/search/functions_61.html
    docs/search/functions_61.js
    docs/search/functions_62.html
    docs/search/functions_62.js
    docs/search/functions_63.html
    docs/search/functions_63.js
    docs/search/functions_64.html
    docs/search/functions_64.js
    docs/search/functions_65.html
    docs/search/functions_65.js
    docs/search/functions_66.html
    docs/search/functions_66.js
    docs/search/functions_67.html
    docs/search/functions_67.js
    docs/search/functions_68.html
    docs/search/functions_68.js
    docs/search/functions_69.html
    docs/search/functions_69.js
    docs/search/functions_6c.html
    docs/search/functions_6c.js
    docs/search/functions_6d.html
    docs/search/functions_6d.js
    docs/search/functions_6e.html
    docs/search/functions_6e.js
    docs/search/functions_6f.html
    docs/search/functions_6f.js
    docs/search/functions_70.html
    docs/search/functions_70.js
    docs/search/functions_72.html
    docs/search/functions_72.js
    docs/search/functions_73.html
    docs/search/functions_73.js
    docs/search/functions_75.html
    docs/search/functions_75.js
    docs/search/functions_77.html
    docs/search/functions_77.js
    docs/search/functions_7e.html
    docs/search/functions_7e.js
    docs/search/mag_sel.png
    docs/search/namespaces_62.html
    docs/search/namespaces_62.js
    docs/search/nomatches.html
    docs/search/related_6f.html
    docs/search/related_6f.js
    docs/search/search.css
    docs/search/search.js
    docs/search/search_l.png
    docs/search/search_m.png
    docs/search/search_r.png
    docs/search/typedefs_66.html
    docs/search/typedefs_66.js
    docs/search/typedefs_70.html
    docs/search/typedefs_70.js
    docs/search/typedefs_73.html
    docs/search/typedefs_73.js
    docs/search/variables_61.html
    docs/search/variables_61.js
    docs/search/variables_62.html
    docs/search/variables_62.js
    docs/search/variables_63.html
    docs/search/variables_63.js
    docs/search/variables_64.html
    docs/search/variables_64.js
    docs/search/variables_66.html
    docs/search/variables_66.js
    docs/search/variables_69.html
    docs/search/variables_69.js
    docs/search/variables_6b.html
    docs/search/variables_6b.js
    docs/search/variables_6c.html
    docs/search/variables_6c.js
    docs/search/variables_6d.html
    docs/search/variables_6d.js
    docs/search/variables_6e.html
    docs/search/variables_6e.js
    docs/search/variables_6f.html
    docs/search/variables_6f.js
    docs/search/variables_70.html
    docs/search/variables_70.js
    docs/search/variables_72.html
    docs/search/variables_72.js
    docs/search/variables_73.html
    docs/search/variables_73.js
    docs/search/variables_75.html
    docs/search/variables_75.js
    docs/search/variables_76.html
    docs/search/variables_76.js
    docs/annotated.html
    docs/bad__buffer__exception_8cpp_source.html
    docs/bad__buffer__exception_8h_source.html
    docs/bad__index__info__exception_8cpp_source.html
    docs/bad__index__info__exception_8h_source.html
    docs/bad__opcodes__exception_8cpp_source.html
    docs/bad__opcodes__exception_8h_source.html
    docs/bad__scan__param__exception_8cpp_source.html
    docs/bad__scan__param__exception_8h_source.html
    docs/bad__scanrange__exception_8cpp_source.html
    docs/bad__scanrange__exception_8h_source.html
    docs/badgerdb__exception_8cpp_source.html
    docs/badgerdb__exception_8h_source.html
    docs/bc_s.png
    docs/btree_8cpp_source.html
    docs/btree_8h_source.html
    docs/buf_hash_tbl_8cpp_source.html
    docs/buf_hash_tbl_8h_source.html
    docs/buffer_8cpp_source.html
    docs/buffer_8h_source.html
    docs/buffer__exceeded__exception_8cpp_source.html
    docs/buffer__exceeded__exception_8h_source.html
    docs/classbadgerdb_1_1_b_tree_index-members.html
    docs/classbadgerdb_1_1_b_tree_index.html
    docs/classbadgerdb_1_1_bad_buffer_exception-members.html
    docs/classbadgerdb_1_1_bad_buffer_exception.html
    docs/classbadgerdb_1_1_bad_buffer_exception.png
    docs/classbadgerdb_1_1_bad_index_info_exception-members.html
    docs/classbadgerdb_1_1_bad_index_info_exception.html
    docs/classbadgerdb_1_1_bad_index_info_exception.png
    docs/classbadgerdb_1_1_bad_opcodes_exception-members.html
    docs/classbadgerdb_1_1_bad_opcodes_exception.html
    docs/classbadgerdb_1_1_bad_opcodes_exception.png
    docs/classbadgerdb_1_1_bad_scan_param_exception-members.html
    docs/classbadgerdb_1_1_bad_scan_param_exception.html
    docs/classbadgerdb_1_1_bad_scan_param_exception.png
    docs/classbadgerdb_1_1_bad_scanrange_exception-members.html
    docs/classbadgerdb_1_1_bad_scanrange_exception.html
    docs/classbadgerdb_1_1_bad_scanrange_exception.png
    docs/classbadgerdb_1_1_badger_db_exception-members.html
    docs/classbadgerdb_1_1_badger_db_exception.html
    docs/classbadgerdb_1_1_badger_db_exception.png
    docs/classbadgerdb_1_1_blob_file-members.html
    docs/classbadgerdb_1_1_blob_file.html
    docs/classbadgerdb_1_1_blob_file.png
    docs/classbadgerdb_1_1_buf_desc-members.html
    docs/classbadgerdb_1_1_buf_desc.html
    docs/classbadgerdb_1_1_buf_hash_tbl-members.html
    docs/classbadgerdb_1_1_buf_hash_tbl.html
    docs/classbadgerdb_1_1_buf_mgr-members.html
    docs/classbadgerdb_1_1_buf_mgr.html
    docs/classbadgerdb_1_1_buffer_exceeded_exception-members.html
    docs/classbadgerdb_1_1_buffer_exceeded_exception.html
    docs/classbadgerdb_1_1_buffer_exceeded_exception.png
    docs/classbadgerdb_1_1_end_of_file_exception-members.html
    docs/classbadgerdb_1_1_end_of_file_exception.html
    docs/classbadgerdb_1_1_end_of_file_exception.png
    docs/classbadgerdb_1_1_file-members.html
    docs/classbadgerdb_1_1_file.html
    docs/classbadgerdb_1_1_file.png
    docs/classbadgerdb_1_1_file_exists_exception-members.html
    docs/classbadgerdb_1_1_file_exists_exception.html
    docs/classbadgerdb_1_1_file_exists_exception.png
    docs/classbadgerdb_1_1_file_iterator-members.html
    docs/classbadgerdb_1_1_file_iterator.html
    docs/classbadgerdb_1_1_file_not_found_exception-members.html
    docs/classbadgerdb_1_1_file_not_found_exception.html
    docs/classbadgerdb_1_1_file_not_found_exception.png
    docs/classbadgerdb_1_1_file_open_exception-members.html
    docs/classbadgerdb_1_1_file_open_exception.html
    docs/classbadgerdb_1_1_file_open_exception.png
    docs/classbadgerdb_1_1_file_scan-members.html
    docs/classbadgerdb_1_1_file_scan.html
    docs/classbadgerdb_1_1_hash_already_present_exception-members.html
    docs/classbadgerdb_1_1_hash_already_present_exception.html
    docs/classbadgerdb_1_1_hash_already_present_exception.png
    docs/classbadgerdb_1_1_hash_not_found_exception-members.html
    docs/classbadgerdb_1_1_hash_not_found_exception.html
    docs/classbadgerdb_1_1_hash_not_found_exception.png
    docs/classbadgerdb_1_1_hash_table_exception-members.html
    docs/classbadgerdb_1_1_hash_table_exception.html
    docs/classbadgerdb_1_1_hash_table_exception.png
    docs/classbadgerdb_1_1_index_scan_completed_exception-members.html
    docs/classbadgerdb_1_1_index_scan_completed_exception.html
    docs/classbadgerdb_1_1_index_scan_completed_exception.png
    docs/classbadgerdb_1_1_insufficient_space_exception-members.html
    docs/classbadgerdb_1_1_insufficient_space_exception.html
    docs/classbadgerdb_1_1_insufficient_space_exception.png
    docs/classbadgerdb_1_1_invalid_page_exception-members.html
    docs/classbadgerdb_1_1_invalid_page_exception.html
    docs/classbadgerdb_1_1_invalid_page_exception.png
    docs/classbadgerdb_1_1_invalid_record_exception-members.html
    docs/classbadgerdb_1_1_invalid_record_exception.html
    docs/classbadgerdb_1_1_invalid_record_exception.png
    docs/classbadgerdb_1_1_invalid_slot_exception-members.html
    docs/classbadgerdb_1_1_invalid_slot_exception.html
    docs/classbadgerdb_1_1_invalid_slot_exception.png
    docs/classbadgerdb_1_1_no_such_key_found_exception-members.html
    docs/classbadgerdb_1_1_no_such_key_found_exception.html
    docs/classbadgerdb_1_1_no_such_key_found_exception.png
    docs/classbadgerdb_1_1_page-members.html
    docs/classbadgerdb_1_1_page.html
    docs/classbadgerdb_1_1_page_file-members.html
    docs/classbadgerdb_1_1_page_file.html
    docs/classbadgerdb_1_1_page_file.png
    docs/classbadgerdb_1_1_page_iterator-members.html
    docs/classbadgerdb_1_1_page_iterator.html
    docs/classbadgerdb_1_1_page_key_pair-members.html
    docs/classbadgerdb_1_1_page_key_pair.html
    docs/classbadgerdb_1_1_page_not_pinned_exception-members.html
    docs/classbadgerdb_1_1_page_not_pinned_exception.html
    docs/classbadgerdb_1_1_page_not_pinned_exception.png
    docs/classbadgerdb_1_1_page_pinned_exception-members.html
    docs/classbadgerdb_1_1_page_pinned_exception.html
    docs/classbadgerdb_1_1_page_pinned_exception.png
    docs/classbadgerdb_1_1_r_i_d_key_pair-members.html
    docs/classbadgerdb_1_1_r_i_d_key_pair.html
    docs/classbadgerdb_1_1_scan_not_initialized_exception-members.html
    docs/classbadgerdb_1_1_scan_not_initialized_exception.html
    docs/classbadgerdb_1_1_scan_not_initialized_exception.png
    docs/classbadgerdb_1_1_slot_in_use_exception-members.html
    docs/classbadgerdb_1_1_slot_in_use_exception.html
    docs/classbadgerdb_1_1_slot_in_use_exception.png
    docs/classes.html
    docs/closed.png
    docs/doxygen.css
    docs/doxygen.png
    docs/end__of__file__exception_8cpp_source.html
    docs/end__of__file__exception_8h_source.html
    docs/file_8cpp_source.html
    docs/file_8h_source.html
    docs/file__exists__exception_8cpp_source.html
    docs/file__exists__exception_8h_source.html
    docs/file__iterator_8h_source.html
    docs/file__not__found__exception_8cpp_source.html
    docs/file__not__found__exception_8h_source.html
    docs/file__open__exception_8cpp_source.html
    docs/file__open__exception_8h_source.html
    docs/files.html
    docs/filescan_8cpp_source.html
    docs/filescan_8h_source.html
    docs/functions.html
    docs/functions_0x62.html
    docs/functions_0x63.html
    docs/functions_0x64.html
    docs/functions_0x65.html
    docs/functions_0x66.html
    docs/functions_0x67.html
    docs/functions_0x68.html
    docs/functions_0x69.html
    docs/functions_0x6b.html
    docs/functions_0x6c.html
    docs/functions_0x6d.html
    docs/functions_0x6e.html
    docs/functions_0x6f.html
    docs/functions_0x70.html
    docs/functions_0x72.html
    docs/functions_0x73.html
    docs/functions_0x75.html
    docs/functions_0x76.html
    docs/functions_0x77.html
    docs/functions_0x7e.html
    docs/functions_func.html
    docs/functions_rela.html
    docs/functions_vars.html
    docs/hash__already__present__exception_8cpp_source.html
    docs/hash__already__present__exception_8h_source.html
    docs/hash__not__found__exception_8cpp_source.html
    docs/hash__not__found__exception_8h_source.html
    docs/hash__table__exception_8cpp_source.html
    docs/hash__table__exception_8h_source.html
    docs/hierarchy.html
    docs/index.html
    docs/index__scan__completed__exception_8cpp_source.html
    docs/index__scan__completed__exception_8h_source.html
    docs/installdox
    docs/insufficient__space__exception_8cpp_source.html
    docs/insufficient__space__exception_8h_source.html
    docs/invalid__page__exception_8cpp_source.html
    docs/invalid__page__exception_8h_source.html
    docs/invalid__record__exception_8cpp_source.html
    docs/invalid__record__exception_8h_source.html
    docs/invalid__slot__exception_8cpp_source.html
    docs/invalid__slot__exception_8h_source.html
    docs/jquery.js
    docs/main_8cpp_source.html
    docs/main_8hpp_source.html
    docs/namespacebadgerdb.html
    docs/namespacemembers.html
    docs/namespacemembers_enum.html
    docs/namespacemembers_func.html
    docs/namespacemembers_type.html
    docs/namespacemembers_vars.html
    docs/namespaces.html
    docs/nav_f.png
    docs/nav_h.png
    docs/no__such__key__found__exception_8cpp_source.html
    docs/no__such__key__found__exception_8h_source.html
    docs/open.png
    docs/page_8cpp_source.html
    docs/page_8h_source.html
    docs/page__iterator_8h_source.html
    docs/page__not__pinned__exception_8cpp_source.html
    docs/page__not__pinned__exception_8h_source.html
    docs/page__pinned__exception_8cpp_source.html
    docs/page__pinned__exception_8h_source.html
    docs/scan__not__initialized__exception_8cpp_source.html
    docs/scan__not__initialized__exception_8h_source.html
    docs/slot__in__use__exception_8cpp_source.html
    docs/slot__in__use__exception_8h_source.html
    docs/structbadgerdb_1_1_buf_stats-members.html
    docs/structbadgerdb_1_1_buf_stats.html
    docs/structbadgerdb_1_1_file_header-members.html
    docs/structbadgerdb_1_1_file_header.html
    docs/structbadgerdb_1_1_index_meta_info-members.html
    docs/structbadgerdb_1_1_index_meta_info.html
    docs/structbadgerdb_1_1_leaf_node_double-members.html
    docs/structbadgerdb_1_1_leaf_node_double.html
    docs/structbadgerdb_1_1_leaf_node_int-members.html
    docs/structbadgerdb_1_1_leaf_node_int.html
    docs/structbadgerdb_1_1_leaf_node_string-members.html
    docs/structbadgerdb_1_1_leaf_node_string.html
    docs/structbadgerdb_1_1_non_leaf_node_double-members.html
    docs/structbadgerdb_1_1_non_leaf_node_double.html
    docs/structbadgerdb_1_1_non_leaf_node_int-members.html
    docs/structbadgerdb_1_1_non_leaf_node_int.html
    docs/structbadgerdb_1_1_non_leaf_node_string-members.html
    docs/structbadgerdb_1_1_non_leaf_node_string.html
    docs/structbadgerdb_1_1_page_header-members.html
    docs/structbadgerdb_1_1_page_header.html
    docs/structbadgerdb_1_1_page_slot-members.html
    docs/structbadgerdb_1_1_page_slot.html
    docs/structbadgerdb_1_1_record_id-members.html
    docs/structbadgerdb_1_1_record_id.html
    docs/structbadgerdb_1_1hash_bucket-members.html
    docs/structbadgerdb_1_1hash_bucket.html
    docs/structtuple-members.html
    docs/structtuple.html
    docs/tab_a.png
    docs/tab_b.png
    docs/tab_h.png
    docs/tab_s.png
    docs/tabs.css
    docs/types_8h_source.html
    src/exceptions/bad_buffer_exception.cpp
    src/exceptions/bad_buffer_exception.h
    src/exceptions/bad_index_info_exception.cpp
    src/exceptions/bad_index_info_exception.h
    src/exceptions/bad_opcodes_exception.cpp
    src/exceptions/bad_opcodes_exception.h
    src/exceptions/bad_scan_param_exception.cpp
    src/exceptions/bad_scan_param_exception.h
    src/exceptions/bad_scanrange_exception.cpp
    src/exceptions/bad_scanrange_exception.h
    src/exceptions/badgerdb_exception.cpp
    src/exceptions/badgerdb_exception.h
    src/exceptions/buffer_exceeded_exception.cpp
    src/exceptions/buffer_exceeded_exception.h
    src/exceptions/end_of_file_exception.cpp
    src/exceptions/end_of_file_exception.h
    src/exceptions/file_exists_exception.cpp
    src/exceptions/file_exists_exception.h
    src/exceptions/file_not_found_exception.cpp
    src/exceptions/file_not_found_exception.h
    src/exceptions/file_open_exception.cpp
    src/exceptions/file_open_exception.h
    src/exceptions/hash_already_present_exception.cpp
    src/exceptions/hash_already_present_exception.h
    src/exceptions/hash_not_found_exception.cpp
    src/exceptions/hash_not_found_exception.h
    src/exceptions/hash_table_exception.cpp
    src/exceptions/hash_table_exception.h
    src/exceptions/index_scan_completed_exception.cpp
    src/exceptions/index_scan_completed_exception.h
    src/exceptions/insufficient_space_exception.cpp
    src/exceptions/insufficient_space_exception.h
    src/exceptions/invalid_page_exception.cpp
    src/exceptions/invalid_page_exception.h
    src/exceptions/invalid_record_exception.cpp
    src/exceptions/invalid_record_exception.h
    src/exceptions/invalid_slot_exception.cpp
    src/exceptions/invalid_slot_exception.h
    src/exceptions/no_such_key_found_exception.cpp
    src/exceptions/no_such_key_found_exception.h
    src/exceptions/page_not_pinned_exception.cpp
    src/exceptions/page_not_pinned_exception.h
    src/exceptions/page_pinned_exception.cpp
    src/exceptions/page_pinned_exception.h
    src/exceptions/scan_not_initialized_exception.cpp
    src/exceptions/scan_not_initialized_exception.h
    src/exceptions/slot_in_use_exception.cpp
    src/exceptions/slot_in_use_exception.h
    src/lib/bufmgr.a
    src/lib/exceptions.a
    src/obj/exceptions/bad_buffer_exception.o
    src/obj/exceptions/bad_index_info_exception.o
    src/obj/exceptions/bad_opcodes_exception.o
    src/obj/exceptions/bad_scan_param_exception.o
    src/obj/exceptions/bad_scanrange_exception.o
    src/obj/exceptions/badgerdb_exception.o
    src/obj/exceptions/buffer_exceeded_exception.o
    src/obj/exceptions/end_of_file_exception.o
    src/obj/exceptions/file_exists_exception.o
    src/obj/exceptions/file_not_found_exception.o
    src/obj/exceptions/file_open_exception.o
    src/obj/exceptions/hash_already_present_exception.o
    src/obj/exceptions/hash_not_found_exception.o
    src/obj/exceptions/hash_table_exception.o
    src/obj/exceptions/index_scan_completed_exception.o
    src/obj/exceptions/insufficient_space_exception.o
    src/obj/exceptions/invalid_page_exception.o
    src/obj/exceptions/invalid_record_exception.o
    src/obj/exceptions/invalid_slot_exception.o
    src/obj/exceptions/no_such_key_found_exception.o
    src/obj/exceptions/page_not_pinned_exception.o
    src/obj/exceptions/page_pinned_exception.o
    src/obj/exceptions/scan_not_initialized_exception.o
    src/obj/exceptions/slot_in_use_exception.o
    src/obj/btree.o
    src/obj/buffer.o
    src/obj/bufHashTbl.o
    src/obj/file.o
    src/obj/filescan.o
    src/obj/main.o
    src/obj/page.o
    src/btree.cpp
    src/btree.h
    src/buffer.cpp
    src/buffer.h
    src/bufHashTbl.cpp
    src/bufHashTbl.h
    src/Contributors
    src/file.cpp
    src/file.h
    src/file_iterator.h
    src/filescan.cpp
    src/filescan.h
    src/License.txt
    src/main.cpp
    src/main.hpp
    src/page.cpp
    src/page.h
    src/page_iterator.h
    src/types.h
    Contributions.txt
    Doxyfile
    License.txt
    Makefile
    README)

add_executable(Btree ${SOURCE_FILES})